[gd_scene load_steps=3 format=2]

[ext_resource path="res://Spawn/ProjectileSpawner.gd" type="Script" id=1]
[ext_resource path="res://Spawn/SummonCircle/SummonCircle.tscn" type="PackedScene" id=2]

[node name="ProjectileSpawner" type="Node2D"]
script = ExtResource( 1 )
delay = 0.0

[node name="SummonCircle" parent="." instance=ExtResource( 2 )]

[node name="SummonTimer" type="Timer" parent="."]

[node name="DelayTimer" type="Timer" parent="."]

